fixed bug in weather call, made text more readable

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,18 +4,11 @@
       padding-left: 200px;
       padding-right: 200px;
     }
-}
-
-.workout-button {
-  background-color: #42f483;
-  color: #1d163a;
-  display: block;
-  width: 100%;
-  height: 200%;
+  
 }
 
 .container {
-  background-color: black;
+  background-color: #899991;
   background-size: contain;
   min-height: 100%;
   min-width: 100%;
@@ -24,8 +17,7 @@
 
 .nav {
   border-radius: 0px;
-  background-color: #FAA24A;
-  /* background-color:#31cd32; */
+  background-color: #CCCCFF;
   text-align: center
 }
 
@@ -39,11 +31,9 @@
 
 .jumbotron {
   border-radius: 0px;
-  color: lightgrey;
-  padding: 0;
-  /* margin: 0 auto; */
-  /* background-size: cover; */
-  /* background-color: black; */
+  color: white;
+  margin: 0 auto;
+  background-size: cover;
 }
 
 
@@ -51,8 +41,6 @@
   max-width: 100%;
   max-height: 100%;
   margin: 0 auto;
-  /* width: 100%;
-  height: 100%; */
  }
 
 .fa {
@@ -83,22 +71,17 @@ h4 {
   width: 100%
 }
 
-.weatherText {
-  color: black;
-font-weight: bold;
-}
-
 .workoutButton {
   width: 100%;
-  background-color: #31cd32;
+  background-color: #CCCCFF;
+  color: #FFFFFF;
 }
-/* .weatherText {
-  color: lightgrey;
-} */
+
 .forecastText {
-  color: lightgrey;
-  margin-top: -40%;
+  color: white;
+  font-weight: bold;
   padding-left: 10px;
+  text-shadow: 2px 2px #000000;
 }
 
 table { width: 100%; box-sizing: border-box; box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,0.1); font-family: 'Ubuntu'; /*border-collapse: collapse;*/ border-spacing: 0; background-color: #333333; }
@@ -131,3 +114,5 @@ span.event-ghost { background-color:transparent; }
   margin-bottom: 35px;
   color: #31cd32
 }
+
+
